# veil

./: .conductor-resume.md  .conductor-state.json  .debug-state.json  .deploy-state.json  .gitignore  ARCHITECTURE.md  DEBUG-REPORT.md  DEPLOYMENTS.md  E2E-LIVE.md  LICENSE  PRD.md  README.md  SCOPE.md  config.json  pipeline-log.md
.github/workflows/: prove.yml
contracts/probe/: Cargo.toml
contracts/probe/src/: lib.rs
contracts/vault-v2/: Cargo.toml  deploy.sh
contracts/vault-v2/src/: journal.rs  lib.rs  test.rs  tree.rs
contracts/vault-v2/test_snapshots/test/: double_init_rejected.1.json  duplicate_position_rejected.1.json  happy_path_margin_raises_floor.1.json  healthy_position_not_liquidatable.1.json  insufficient_liquidity_rejected.1.json  interest_accrues_and_lps_earn.1.json  liquidate_missing_position_rejected.1.json  liquidate_on_term_expiry.1.json  liquidate_repaid_position_rejected.1.json  liquidate_twice_rejected.1.json  liquidate_undercollateralized_position.1.json  liquidated_root_matches_cross_impl_vector.1.json  liquidated_root_starts_empty.1.json  lock_handle_replay_rejected.1.json  lp_deposit_then_withdraw_round_trips.1.json  margin_must_strictly_raise_floor.1.json  margin_on_closed_position_rejected.1.json  margin_tampered_journal_reverts.1.json  margin_unknown_root_rejected.1.json  margin_wrong_borrower_rejected.1.json  repaid_root_matches_cross_impl_vector.1.json  repaid_root_starts_empty.1.json  repay_appends_to_repaid_tree.1.json  repay_twice_rejected.1.json  tampered_journal_reverts.1.json  threshold_too_low_rejected.1.json  unknown_root_rejected.1.json  wrong_borrower_rejected.1.json
guest/: PHASE-2-RESULT.md
guest/host/: Cargo.toml
guest/host/src/: main.rs
guest/methods/guest/: Cargo.toml
guest/methods/guest/src/: main.rs
relayer/: anonymity-seeder.mjs  anonymity-seeder.test.mjs  checkpoint-relayer.mjs  config.mjs  liquidated-root-relayer.mjs  liquidated-root-relayer.test.mjs  package.json  root-relayer.mjs  root-relayer.test.mjs  secret-relayer.mjs  soroban-root-relayer.mjs  soroban-root-relayer.test.mjs
research/: chain-dna.md  ideas-v6.md  ideas-v7-ecosystem-native.md  ideas.md  research-brief.md
spike/: PHASE-0A-RESULT.md
tasks/: lessons.md
warroom/: .warroom-state.json  FINAL-VERDICT-V1.md  FINAL-VERDICT-V5.md  WARROOM-V3-BRIEF.md  WARROOM-V5-BRIEF.md  WINNER-BRIEF.md  concerns-snapshot-V2.md  concerns-snapshot-V3.md  deliberation-transcript-V2.md  deliberation-transcript-V5.md
web/: PROVING.md  brand.json  next.config.mjs  package.json  pnpm-lock.yaml
(+93 files in other folders)
