[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.5" }
risc0-ethereum-contracts = "3.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
alloy-primitives = { version = "0.8", features = ["rlp"] }
veil-core = { path = "../core" }
