[package]
name = "veil_prove"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.5", default-features = false, features = ['std'] }
veil-core = { path = "../../core" }

# SHA-256 acceleration: the zkVM has a SHA-256 accelerator, the locked reason for choosing
# SHA-256 over Poseidon. veil-core hashes via the `sha2` crate, so patching it to risc0's
# accelerated fork transparently speeds up Merkle membership. (Correctness is identical with
# or without the patch; this is the proving-cost optimization.)
[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
